--- a/css/styles.css
+++ b/css/styles.css
@@ -159,33 +159,41 @@ body {
   width: 45%;
   z-index: 100;
 }
-.testimonial-wrapper .testimonial-1,
-.testimonial-wrapper .testimonial-2 {
+.testimonial-wrapper .testimonial-slide {
+  position: relative;
+  top: 0;
+  transition: all 0.4s ease-in-out;
+}
+.testimonial-wrapper .testimonial-slide.t280 {
+  top: -280px;
+}
+.testimonial-wrapper .testimonial-slide .testimonial-1,
+.testimonial-wrapper .testimonial-slide .testimonial-2 {
   height: 100%;
   width: 100%;
 }
-.testimonial-wrapper .testimonial-1 .quote,
-.testimonial-wrapper .testimonial-2 .quote {
+.testimonial-wrapper .testimonial-slide .testimonial-1 .quote,
+.testimonial-wrapper .testimonial-slide .testimonial-2 .quote {
   font-family: "Inter", sans-serif;
   font-weight: 300;
   color: #202046;
 }
-.testimonial-wrapper .testimonial-1 .name,
-.testimonial-wrapper .testimonial-1 .role,
-.testimonial-wrapper .testimonial-2 .name,
-.testimonial-wrapper .testimonial-2 .role {
+.testimonial-wrapper .testimonial-slide .testimonial-1 .name,
+.testimonial-wrapper .testimonial-slide .testimonial-1 .role,
+.testimonial-wrapper .testimonial-slide .testimonial-2 .name,
+.testimonial-wrapper .testimonial-slide .testimonial-2 .role {
   display: inline-block;
   font-size: 0.65rem;
 }
-.testimonial-wrapper .testimonial-1 .name,
-.testimonial-wrapper .testimonial-2 .name {
+.testimonial-wrapper .testimonial-slide .testimonial-1 .name,
+.testimonial-wrapper .testimonial-slide .testimonial-2 .name {
   font-family: "Inter", sans-serif;
   font-weight: 700;
   color: #202046;
   margin-top: 15px;
 }
-.testimonial-wrapper .testimonial-1 .role,
-.testimonial-wrapper .testimonial-2 .role {
+.testimonial-wrapper .testimonial-slide .testimonial-1 .role,
+.testimonial-wrapper .testimonial-slide .testimonial-2 .role {
   font-family: "Inter", sans-serif;
   font-weight: 500;
   color: #babacf;
@@ -215,22 +223,33 @@ body {
   position: relative;
   left: 0;
   width: 1000px;
+  transition: all 0.4s ease-in-out;
+}
+.image-frame .image-slide.l540 {
+  left: -540px;
 }
 
 .image-controls {
+  align-items: center;
   background: white;
   border-radius: 40px;
+  bottom: -28px;
   -webkit-box-shadow: 0px 10px 35px -10px rgba(32, 32, 70, 0.6);
   -moz-box-shadow: 0px 10px 35px -10px rgba(32, 32, 70, 0.6);
   box-shadow: 0px 10px 35px -10px rgba(32, 32, 70, 0.6);
   display: flex;
-  align-items: center;
+  height: 56px;
   justify-content: space-around;
+  left: 60px;
   position: absolute;
   width: 112px;
-  height: 56px;
-  bottom: -28px;
-  left: 60px;
+}
+.image-controls div {
+  align-items: center;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  width: 50%;
 }
 
 /*# sourceMappingURL=styles.css.map */
