--- a/css/styles.css
+++ b/css/styles.css
@@ -164,8 +164,8 @@ body {
   top: 0;
   transition: all 0.4s ease-in-out;
 }
-.testimonial-wrapper .testimonial-slide.t280 {
-  top: -280px;
+.testimonial-wrapper .testimonial-slide.testimonial-swap {
+  top: -283px;
 }
 .testimonial-wrapper .testimonial-slide .testimonial-1,
 .testimonial-wrapper .testimonial-slide .testimonial-2 {
@@ -225,7 +225,7 @@ body {
   width: 1000px;
   transition: all 0.4s ease-in-out;
 }
-.image-frame .image-slide.l540 {
+.image-frame .image-slide.image-swap {
   left: -540px;
 }
 
