--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -94,7 +94,7 @@ body {
     height: 100%;
     position: relative;
     left: 0;
-    width: 1000px;
+    width: 1080px;
     transition: all 0.4s ease-in-out;
     &.image-swap {
       left: -540px;
@@ -121,5 +121,44 @@ body {
     display: flex;
     justify-content: center;
     width: 50%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  body {
+    //TODO background image styles
+    flex-direction: column;
+    height: 100%;
+  }
+
+  .testimonial-wrapper {
+    visibility: hidden;
+    order: 2;
+  }
+
+  .image-wrapper {
+    order: 1;
+    width: 300px;
+    margin-top: 100px;
+    .image-frame {
+      margin: 0 auto;
+      width: 300px;
+      height: 300px;
+      .image-1 img,
+      .image-2 img {
+        width: 300px;
+        height: 100%;
+      }
+      .image-slide {
+        width: 600px;
+        &.image-swap {
+          left: -300px;
+        }
+      }
+    }
+    .image-controls {
+      left: 50%;
+      transform: translateX(-50%);
+    }
   }
 }
